# llm-master

./: .eslintrc.cjs  .gitignore  .lintstagedrc  .prettierignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vite.config.ts
.omo/plans/: fix-plan.md
.omo/run-continuation/: ses_1966d32d6ffe0MVdU3ImKKHNTo.json  ses_196f9b78bffelZnI0g6y8avIUB.json
src/: App.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/animations/: render.py  requirements.txt
src/animations/scenes/: alignment_scene.py  attention_scene.py  calculus_scene.py  embedding_scene.py  gradient_scene.py  inference_scene.py  lora_scene.py  matrix_scene.py  nn_scene.py  prompt_scene.py  rag_agent_scene.py  scaling_scene.py  sequence_scene.py  vector_scene.py
src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  SearchDialog.test.tsx  SearchDialog.tsx
src/components/derivation/: AttentionHeatmap.tsx  DerivationViewer.tsx  FormulaDisplay.tsx  GradientFlow.tsx  MatrixVisualizer.tsx  StepPlayer.tsx  VideoPlayer.test.tsx  VideoPlayer.tsx
src/components/learning/: ChapterNav.tsx  LessonCard.tsx  ProgressIndicator.tsx  (+1 more)
src/data/: searchIndex.test.ts  searchIndex.ts
src/pages/: Chapter.tsx  Home.test.tsx  Home.tsx  Lesson.tsx  NotFound.tsx  Progress.tsx  Resources.tsx  Sandbox.tsx
src/stores/: navigationStore.ts  progressStore.test.ts  progressStore.ts  themeStore.test.ts  themeStore.ts
src/styles/: globals.css
src/types/: index.ts
(+17 files in other folders)
